<resources>
    <string name="app_name">My Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Станислав</string>
    <string name="nav_header_subtitle">+7 (999) 777 77 77</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_new_group">Новая группа</string>
    <string name="menu_new_chat">Новый секретный чат</string>
    <string name="menu_create_channel">Создать канал</string>
    <string name="menu_contacts">Контакты</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_calls">Звонки</string>
    <string name="menu_invite_friends">Пригласить друзей</string>
    <string name="menu_settings">Настройки</string>

    <string name="screen_new_group">Экран для создания новой группы.</string>
    <string name="screen_new_chat">Экран для запуска нового секретного чата.</string>
    <string name="screen_create_channel">Экран для создания нового канала.</string>
    <string name="screen_contacts">Экран со списком контактов.</string>
    <string name="screen_favorites">Экран с избранными элементами.</string>
    <string name="screen_calls">Экран истории звонков.</string>
    <string name="screen_invite_friends">Экран приглашения друзей.</string>
    <string name="screen_settings">Экран настроек приложения.</string>
</resources>
