<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_group"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_new_group" />

        <item
            android:id="@+id/nav_new_chat"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_new_chat" />

        <item
            android:id="@+id/nav_create_channel"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_create_channel" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_contacts"
                android:icon="@android:drawable/ic_menu_my_calendar"
                android:title="@string/menu_contacts" />

            <item
                android:id="@+id/nav_favorites"
                android:icon="@android:drawable/ic_menu_compass"
                android:title="@string/menu_favorites" />

            <item
                android:id="@+id/nav_calls"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_calls" />

            <item
                android:id="@+id/nav_invite_friends"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/menu_invite_friends" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>
